# drone

./: README.md
firmware/: platformio.ini
firmware/src/: baro.cpp  baro.h  consts.h  fake_receiver.h  filter.cpp  filter.h  imu.cpp  imu.h  main.cpp  motor.cpp  motor.h  pid.h  receiver.cpp  receiver.h  state.cpp  state.h  transmitter.cpp  transmitter.h
ground/: Cargo.toml
ground/src/: accelerometer_view.rs  app.rs  attitude_view.rs  chat_view.rs  commands_view.rs  data.rs  drone_view.rs  main.rs  notes.rs  pid_view.rs  rc_control.rs  rc_view.rs
pi/: main.py
rpi/: Cargo.toml  README.md
rpi/src/: main.rs
