[package]
name = "ground"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
eframe = {version="0.27.2", features=["wgpu"]}
egui_extras = "0.27.2"
egui_plot = "0.27.2"
env_logger = "0.11.3"
epaint = "0.27.2"
nalgebra = "0.32.6"
ringbuffer = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.23.0"
url = "2.5.2"
